--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Bath Visual Computing Visual Computing Reading Group">
+  <meta name="description" content="Bath Visual Computing AI & ML Reading Group">
 
   <title>BVC VCRG</title>
   <link rel="stylesheet" href="bootstrap-5.0.2.min.css">
@@ -15,17 +15,17 @@
 <body>
 
 <div class="container">
-  <img src="bvc-logo.png" width="400" alt="Logo for Bath Visual Computing" style="display:block; margin: 0.5em auto;" />
+  <img src="bvc-logo.png" width="400" alt="Logo for Bath AI & ML Group" style="display:block; margin: 0.5em auto;" />
   <h4 class="heading center_text">Reading Group and Research Seminar</h4>
   <hr>
 
   <p class="location_time center_text">
-    <b>Wednesdays from 15:15 to 16:05 online on Teams</b>
+    <b>Thursdays from 13:15 to 14:05 online</b>
   </p>
 
   <p>
-    This page contains information and the schedule for the Bath Visual Computing reading group and research seminar.
-    Most weeks, two students will give two different types of presentation:
+    This page contains information and the schedule for the Bath AI &ML reading group and research seminar.
+    EACH 
   </p>
 
   <h5>Reading Group</h5>
