--- a/index.html
+++ b/index.html
@@ -20,38 +20,34 @@
   <hr>
 
   <p class="location_time center_text">
-    <b>Thursdays from 13:15 to 14:05 online</b>
+    <b>Thursdays from 13:15 to 14:05.  Feel free to bring your lunch!</b>
   </p>
 
   <p>
-    This page contains information and the schedule for the Bath AI &ML reading group and research seminar.
-    EACH 
+    This page contains information and the schedule for the Bath AI & ML reading group and research seminar.
+    Every other week one student or member of staff will present a paper.   The paper for the next session will be mailed out in advance.  It would be great if attendees 
+	  could have read it beforehand, but the speaker will explain the paper so this is not strictly necessary.   This is intended to be a friendly and supportive environment where 
+    we collectively explore a new idea.   Do what you can to make it comfortable for the speaker, especially if they are junior. </p>
+
+   <p>A list of forthcoming speakers is presented at the bottom of this page.  The order is randomized.  We understand that there are conference deadlines and that people go on vacations. 
+    If you can't make your week, then it is up to you to swap with someone else further down the list.  </p> 
+
+   <p> Why is attending this important?   All great academic gropus are more than the sum of their parts.   This is a venue where you can meet and discuss ideas with people from your own and other groups.  
+	  Throughout the year you will be exposed to 26 new ideas.  Many of these will be interesting but not directly influence your work, but every now and then you will get an idea that you can apply to your own research.
+	  In addition, then ensuing discussions will mean that you become familiar with everyone else's expertise.  Maybe knowledge that you have could be useful to someone else writing a NeurIPS paper.  Boom! Co-authorship.  
+	  More than the sum of our parts.
   </p>
 
   <h5>Reading Group</h5>
-  <p>
-    A short presentation (~10 minutes) and group discussion (~10 minutes) of a usually recent research paper that is relevant to a student’s research and of more general interest to the wider group.
-    This can also be a quick survey of a field, e.g. based on your confirmation report.
-    You can prepare slides, if you like, or present using an existing video and the paper.
-  </p>
+
   <p>
     <u>Preparation:</u>
-    Please send the title of your chosen paper and a link to the project or paper to the organiser the week before your presentation.
-    The idea is to allow others to look at the paper prior to the reading group on Wednesday.
+    The organizer (currently Sophia Jones) will contact you two weeks in advance to ask for the paper that you will present.   You can choose whatever you want, but please choose something general/important enough that it will be of interset to most of the group.  
+    If you don't have any ideas, a suggests list of papers is kept here.  Feel free to add any interesting looking papers to the list! 
+
+   The room is booked for a full hour, but it's assumed that most presentations will take about 20 minutes, leaving plenty of time for discussion.   Slides are encouraged, but working through the PDF of the paper is also acceptable.
+
   </p>
-
-  <h5>Research Seminar</h5>
-  <p>
-    This is a short presentation (~10 minutes) on a student’s current work in progress, including the motivation and goal of the project, as well as a discussion of current issues and next steps, followed by questions and answers from the group (~10 minutes).
-  </p>
-
-  <hr>
-  <h5>Ground rules</h5>
-  <ol>
-    <li>Timeslots were allocated randomly with manual tweaks to ensure at least 4 weeks between presentations by the same person.</li>
-    <li>If a time is inconvenient for whatever reason, please find someone to swap with, who agrees to swap. Notify the organiser about the swap via email, ccing the other presenter.</li>
-  </ol>
-
   <h4 class="center_text">Schedule for 2022</h4>
   <hr>
 
