--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <p>
     This page contains information and the schedule for the Bath AI & ML reading group and research seminar.
     Every other week one student or member of staff will present a paper.   The paper for the next session will be mailed out in advance.  It would be great if attendees 
-	  could have read it beforehand, but the speaker will explain the paper so this is not strictly necessary.   This is intended to be a friendly and supportive environment where 
+	  could have read the paper beforehand, but the speaker will explain the paper so this is not strictly necessary.   This is intended to be a friendly and supportive environment where 
     we collectively explore a new idea.   Do what you can to make it comfortable for the speaker, especially if they are junior. </p>
 
    <p>A list of forthcoming speakers is presented at the bottom of this page.  The order is randomized.  We understand that there are conference deadlines and that people go on vacations. 
@@ -43,7 +43,8 @@
   <p>
     <u>Preparation:</u>
     The organizer (currently Sophia Jones) will contact you two weeks in advance to ask for the paper that you will present.   You can choose whatever you want, but please choose something general/important enough that it will be of interset to most of the group.  
-    If you don't have any ideas, a suggests list of papers is kept here.  Feel free to add any interesting looking papers to the list! 
+    If you don't have any ideas, a suggests list of papers is kept <a href="url">https://docs.google.com/document/d/1dHP-4nOF-qH9EOdxSb1AQa3nSe0ixJdKfjn_ZN8MAmI/edit#heading=h.vvbkm4wwzx5j here</a>
+  Feel free to add any interesting looking papers to the list! 
 
    The room is booked for a full hour, but it's assumed that most presentations will take about 20 minutes, leaving plenty of time for discussion.   Slides are encouraged, but working through the PDF of the paper is also acceptable.
 
@@ -62,13 +63,13 @@
       </thead>
       <tbody>
         <tr>
-          <td>4&nbsp;Dec ??&nbsp;2023</td>
-          <td>Jundan Luo:<br><a href="https://arxiv.org/abs/2101.12176"><b>On the Origin of Implicit Regularization in Stochastic Gradient Descent</b></a> Samuel L. Smith, Benoit Dherin, David G. T. Barrett, Soham De, ICLR 2021</td>
+          <td>4&nbsp;Dec 14&nbsp;2023</td>
+          <td>Prof Simon Prince:<br><a href="https://arxiv.org/abs/2101.12176"><b>On the Origin of Implicit Regularization in Stochastic Gradient Descent</b></a> Samuel L. Smith, Benoit Dherin, David G. T. Barrett, Soham De, ICLR 2021</td>
           <td>Simon Prince:<br></td>
         </tr>
 	<tr>
-          <td>4&nbsp;Dec ??&nbsp;2023</td>
-          <td>Jundan Luo:<br><a href="https://arxiv.org/abs/2101.12176"><b>On the Origin of Implicit Regularization in Stochastic Gradient Descent</b></a> Samuel L. Smith, Benoit Dherin, David G. T. Barrett, Soham De, ICLR 2021</td>
+          <td>4&nbsp;Jan 11&nbsp;2023</td>
+          <td>Josh Evans:<br><a href="https://arxiv.org/abs/2101.12176"><b>Creating Multi-Level Skill Hierarchies in Reinforcement Learning</b></a> Joshua Benjamin Evans and {\"O}zg{\"u}r {\c{S}}im{\c{s}}ek}, NeurIPS 2023</td>
           <td>Simon Prince:<br></td>
         </tr>
 	<tr>
