--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <title>BVC VCRG</title>
   <link rel="stylesheet" href="bootstrap-5.0.2.min.css">
   <link rel="stylesheet" href="style.css">
-  <link rel="shortcut icon" type="image/png" href="bvc-icon.png" />
+  <!-- <link rel="shortcut icon" type="image/png" href="bvc-icon.png" /> -->
 </head>
 
 <body>
 
 <div class="container">
-  <img src="bvc-logo.png" width="400" alt="Logo for Bath AI & ML Group" style="display:block; margin: 0.5em auto;" />
+  <!-- <img src="bvc-logo.png" width="400" alt="Logo for Bath AI & ML Group" style="display:block; margin: 0.5em auto;" /> -->
   <h4 class="heading center_text">Reading Group and Research Seminar</h4>
   <hr>
 
