--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Bath Visual Computing AI & ML Reading Group">
 
-  <title>BVC VCRG</title>
+  <title>AI Reading Group</title>
   <link rel="stylesheet" href="bootstrap-5.0.2.min.css">
   <link rel="stylesheet" href="style.css">
   <!-- <link rel="shortcut icon" type="image/png" href="bvc-icon.png" /> -->
