--- a/index.html
+++ b/index.html
@@ -61,19 +61,15 @@
       </thead>
       <tbody>
         <tr>
-          <td>4&nbsp;Dec 14&nbsp;2023</td>
+          <td>14&nbsp;Dec &nbsp;2023</td>
           <td>Prof Simon Prince:<br><a href="https://arxiv.org/abs/2101.12176"><b>On the Origin of Implicit Regularization in Stochastic Gradient Descent</b></a> Samuel L. Smith, Benoit Dherin, David G. T. Barrett, Soham De, ICLR 2021</td>
         </tr>
 	<tr>
-          <td>4&nbsp;Jan 11&nbsp;2023</td>
+          <td>11&nbsp;Jan &nbsp;2024</td>
           <td>Josh Evans:<br><a href="https://arxiv.org/abs/2101.12176"><b>Creating Multi-Level Skill Hierarchies in Reinforcement Learning</b></a> Joshua Benjamin Evans and {\"O}zg{\"u}r {\c{S}}im{\c{s}}ek}, NeurIPS 2023</td>
         </tr>
 	<tr>
-          <td>4&nbsp;Dec ??&nbsp;2023</td>
-          <td>Jundan Luo:<br><a href="https://arxiv.org/abs/2101.12176"><b>On the Origin of Implicit Regularization in Stochastic Gradient Descent</b></a> Samuel L. Smith, Benoit Dherin, David G. T. Barrett, Soham De, ICLR 2021</td>
-        </tr>
-	<tr>
-          <td>4&nbsp;Dec ??&nbsp;2023</td>
+          <td>25&nbsp;Jan &nbsp;2024</td>
           <td>Jundan Luo:<br><a href="https://arxiv.org/abs/2101.12176"><b>On the Origin of Implicit Regularization in Stochastic Gradient Descent</b></a> Samuel L. Smith, Benoit Dherin, David G. T. Barrett, Soham De, ICLR 2021</td>
         </tr>
       </tbody>
