--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
    The room is booked for a full hour, but it's assumed that most presentations will take about 20 minutes, leaving plenty of time for discussion.   Slides are encouraged, but working through the PDF of the paper is also acceptable.
 
   </p>
-  <h4 class="center_text">Schedule for 2022</h4>
+  <h4 class="center_text">Schedule for 2023/24</h4>
   <hr>
 
   <div class="table-wrapper">
@@ -56,21 +56,25 @@
       <thead>
         <tr>
           <th scope="col" width="10%">Date</th>
-          <th scope="col" width="45%">Reading&nbsp;Group</th>
+          <th scope="col" width="35%">Presenter</th>
+	  <th scope="col" width="55%">Paper</th>
         </tr>
       </thead>
       <tbody>
         <tr>
           <td>14&nbsp;Dec &nbsp;2023</td>
-          <td>Prof Simon Prince:<br><a href="https://arxiv.org/abs/2101.12176"><b>On the Origin of Implicit Regularization in Stochastic Gradient Descent</b></a> Samuel L. Smith, Benoit Dherin, David G. T. Barrett, Soham De, ICLR 2021</td>
+	  <td> Prof Simon Prince </td>
+          <td><a href="https://arxiv.org/abs/2101.12176"><b>On the Origin of Implicit Regularization in Stochastic Gradient Descent</b></a> Samuel L. Smith, Benoit Dherin, David G. T. Barrett, Soham De, ICLR 2021</td>
         </tr>
 	<tr>
           <td>11&nbsp;Jan &nbsp;2024</td>
-          <td>Josh Evans:<br><a href="https://arxiv.org/abs/2101.12176"><b>Creating Multi-Level Skill Hierarchies in Reinforcement Learning</b></a> Joshua Benjamin Evans and {\"O}zg{\"u}r {\c{S}}im{\c{s}}ek}, NeurIPS 2023</td>
+	  <td> Josh Evans </td>
+          <td><a href="https://arxiv.org/abs/2101.12176"><b>Creating Multi-Level Skill Hierarchies in Reinforcement Learning</b></a> Joshua Benjamin Evans and {\"O}zg{\"u}r {\c{S}}im{\c{s}}ek}, NeurIPS 2023</td>
         </tr>
 	<tr>
           <td>25&nbsp;Jan &nbsp;2024</td>
-          <td>Jundan Luo:<br><a href="https://arxiv.org/abs/2101.12176"><b>On the Origin of Implicit Regularization in Stochastic Gradient Descent</b></a> Samuel L. Smith, Benoit Dherin, David G. T. Barrett, Soham De, ICLR 2021</td>
+	  <td> Sophia Jones </td>
+          <td><a href="https://arxiv.org/abs/2101.12176"><b>On the Origin of Implicit Regularization in Stochastic Gradient Descent</b></a> Samuel L. Smith, Benoit Dherin, David G. T. Barrett, Soham De, ICLR 2021</td>
         </tr>
       </tbody>
     </table>
