--- a/index.html
+++ b/index.html
@@ -68,12 +68,17 @@
           <td><a href="https://arxiv.org/abs/2101.12176"><b>On the Origin of Implicit Regularization in Stochastic Gradient Descent</b></a> Samuel L. Smith, Benoit Dherin, David G. T. Barrett, Soham De, ICLR 2021</td>
         </tr>
 	<tr>
-          <td>11&nbsp;Jan &nbsp;2024</td>
+          <td>18&nbsp;Jan &nbsp;2024</td>
 	  <td>Josh Evans</td>
           <td><a href="https://arxiv.org/abs/2101.12176"><b>Creating Multi-Level Skill Hierarchies in Reinforcement Learning</b></a> Joshua Benjamin Evans and &Ouml;zg&uuml;r &#350;im&#351;ek}, NeurIPS 2023</td>
         </tr>
 	<tr>
-          <td>25&nbsp;Jan &nbsp;2024</td>
+          <td>8&nbsp;Feb &nbsp;2024</td>
+	  <td>Sophia Jones</td>
+          <td><a href="https://arxiv.org/abs/2101.12176"><b>On the Origin of Implicit Regularization in Stochastic Gradient Descent</b></a> Samuel L. Smith, Benoit Dherin, David G. T. Barrett, Soham De, ICLR 2021</td>
+        </tr>
+	<tr>
+          <td>15&nbsp;Feb &nbsp;2024</td>
 	  <td>Sophia Jones</td>
           <td><a href="https://arxiv.org/abs/2101.12176"><b>On the Origin of Implicit Regularization in Stochastic Gradient Descent</b></a> Samuel L. Smith, Benoit Dherin, David G. T. Barrett, Soham De, ICLR 2021</td>
         </tr>
