--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
 	<tr>
           <td>25&nbsp;Jan &nbsp;2024</td>
 	  <td>Sophia Jones</td>
-          <td><a href="https://arxiv.org/abs/2101.12176"><b>On the Origin of Implicit Regularization in Stochastic Gradient Descent</b></a> Samuel L. Smith, Benoit Dherin, David G. T. Barrett, Soham De, ICLR 2021</td>
+          <td>TBC</td>
         </tr>
 	<tr>
           <td>15&nbsp;Feb &nbsp;2024</td>
-	  <td>Sophia Jones</td>
-          <td><a href="https://arxiv.org/abs/2101.12176"><b>On the Origin of Implicit Regularization in Stochastic Gradient Descent</b></a> Samuel L. Smith, Benoit Dherin, David G. T. Barrett, Soham De, ICLR 2021</td>
+	  <td>Jack McKinlay</td>
+          <td>TBC</td>
         </tr>
       </tbody>
     </table>
