--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <hr>
 
   <p class="location_time center_text">
-    <b>Thursdays from 13:15 to 14:05.  Feel free to bring your lunch!</b>
+    <b>Thursdays from 13:15 to 14:05.  In person only.  Feel free to bring your lunch!</b>
   </p>
 
   <p>
@@ -32,10 +32,11 @@
    <p>A list of forthcoming speakers is presented at the bottom of this page.  The order is randomized.  We understand that there are conference deadlines and that people go on vacations. 
     If you can't make your week, then it is up to you to swap with someone else further down the list.  </p> 
 
-   <p> Why is attending this important?   All great academic gropus are more than the sum of their parts.   This is a venue where you can meet and discuss ideas with people from your own and other groups.  
+   <p> Why is attending this important?   All great academic groups are more than the sum of their parts.   This is a venue where you can meet and discuss ideas with people from your own and other groups.  
 	  Throughout the year you will be exposed to 26 new ideas.  Many of these will be interesting but not directly influence your work, but every now and then you will get an idea that you can apply to your own research.
 	  In addition, then ensuing discussions will mean that you become familiar with everyone else's expertise.  Maybe knowledge that you have could be useful to someone else writing a NeurIPS paper.  Boom! Co-authorship.  
-	  More than the sum of our parts.
+	  More than the sum of our parts.  In addition, if you are a PhD student, you are going to need a job at the end of your degree.   A broader knowledge of ML can only help with this.  In short, the expected payback from
+	   this is very good even if it doesn't feel like that week to week.
   </p>
 
   <h5>Reading Group</h5>
