--- a/index.html
+++ b/index.html
@@ -91,9 +91,53 @@
 <h5>Future speakers</h5>
 
 <ol>
-  <li>Stevie Wonder</li>
-  <li>Rishi Sunak</li>
-  <li>William Shatner</li>
+	<li>Dr Tom Fincham Haines	</li>
+	<li>Thomas Cannon	</li>
+	<li>Alice Parfett	</li>
+	<li>Emma Li	</li>
+	<li>Mr Harry Clough	</li>
+	<li>Ketan Fatania	</li>
+	<li>Jessica Nicholson	</li>
+	<li>Andreas Theophilou	</li>
+	<li>Pablo Medina	</li>
+	<li>Jack E Saunders	</li>
+	<li>Siyuan Gou	</li>
+	<li>Mr Massoud Khodadadzadeh	</li>
+	<li>Matthew Hewitt	</li>
+	<li>Mohammed Fahid	</li>
+	<li>Akshil Patel	</li>
+	<li>Dr Julian Padget	</li>
+	<li>Damian Ziubroniewicz	</li>
+	<li>Dr Rohit Babbar	</li>
+	<li>Professor Özgür Şimşek	</li>
+	<li>Paul Russell	</li>
+	<li>Thomas Smith	</li>
+	<li>Dr Jie Zhang	</li>
+	<li>Dr Gennaro Auricchio	</li>
+	<li>Lukas Macha	</li>
+	<li>Professor Neill Campbell 	</li>
+	<li>Daniel Beechey	</li>
+	<li>Christoph Bumiller	</li>
+	<li>Oscar Bryan	</li>
+	<li>Dr Wenbin Li 	</li>
+	<li>Dil Jagpal	</li>
+	<li>Professor Mike Tipping	</li>
+	<li>Dr Harish Tayyar Madabushi	</li>
+	<li>Callum Pitceathly	</li>
+	<li>Jack R Saunders	</li>
+	<li>Tom Ryder	</li>
+	<li>Alexandros Rotsidis	</li>
+	<li>Dr Andrew Barnes	</li>
+	<li>Dr Alexander Power	</li>
+	<li>Ningchao Wang	</li>
+	<li>Yuchen Lu	</li>
+	<li>Isaac Flower	</li>
+	<li>Philip Lorimer	</li>
+	<li>Jundan Luo	</li>
+	<li>Dr Georgios Exarchakis	</li>
+	<li>James Elson	</li>
+	<li>Yifan Li	</li>
+	<li>Dona Shaji	</li>
 </ol>  
 
 
