--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   </div>
 </div>
 
-<h5>Future speakers</h5>
+<h5>Future speakers (tentative, to be discussed at first meeting)</h5>
 
 <ol>
 	<li>Dr Tom Fincham Haines	</li>
