--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
    <p> Why is attending this important?   All great academic groups are more than the sum of their parts.   This is a venue where you can meet and discuss ideas with people from your own and other groups.  
 	  Throughout the year you will be exposed to 26 new ideas.  Many of these will be interesting but not directly influence your work, but every now and then you will get an idea that you can apply to your own research.
-	  In addition, then ensuing discussions will mean that you become familiar with everyone else's expertise.  Maybe knowledge that you have could be useful to someone else writing a NeurIPS paper.  Boom! Co-authorship.  
+	  In addition, then ensuing discussions will mean that you become familiar with everyone else's expertise.  Maybe knowledge that you have could be useful to someone else writing a NeurIPS paper. Co-authorship beckons.  
 	  More than the sum of our parts.  In addition, if you are a PhD student, you are going to need a job at the end of your degree.   A broader knowledge of ML can only help with this.  In short, the expected payback from
 	   this is very good even if it doesn't feel like that week to week.
   </p>
