--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <p>
     <u>Preparation:</u>
     The organizer (currently <a href = "mailto:sj2073@bath.ac.uk"> Sophia Jones</a>) will contact you two weeks in advance to ask for the paper that you will present.   You can choose whatever you want, but please choose something general/important enough that it will be of interset to most of the group.  
-    If you don't have any ideas, a suggests list of papers is kept <a href="https://docs.google.com/document/d/1dHP-4nOF-qH9EOdxSb1AQa3nSe0ixJdKfjn_ZN8MAmI/edit#heading=h.vvbkm4wwzx5j"> here</a>
+    If you don't have any ideas, a suggested list of papers is kept <a href="https://docs.google.com/document/d/1dHP-4nOF-qH9EOdxSb1AQa3nSe0ixJdKfjn_ZN8MAmI/edit#heading=h.vvbkm4wwzx5j"> here</a>
   Feel free to add any interesting looking papers to the list! 
 
    The room is booked for a full hour, but it's assumed that most presentations will take about 20 minutes, leaving plenty of time for discussion.   Slides are encouraged, but working through the PDF of the paper is also acceptable.
