--- a/index.html
+++ b/index.html
@@ -95,17 +95,20 @@
 	<li>Thomas Cannon	</li>
 	<li>Alice Parfett	</li>
 	<li>Emma Li	</li>
-	<li>Mr Harry Clough	</li>
+	<li>Dr Xi Chen </li>
+	<li>Harry Clough	</li>
 	<li>Ketan Fatania	</li>
 	<li>Jessica Nicholson	</li>
 	<li>Andreas Theophilou	</li>
+	<li>Dr Marina De Vos </li>
 	<li>Pablo Medina	</li>
 	<li>Jack E Saunders	</li>
 	<li>Siyuan Gou	</li>
-	<li>Mr Massoud Khodadadzadeh	</li>
+	<li>Massoud Khodadadzadeh	</li>
 	<li>Matthew Hewitt	</li>
 	<li>Mohammed Fahid	</li>
 	<li>Akshil Patel	</li>
+	<li>Syeda Zahra	</li>
 	<li>Dr Julian Padget	</li>
 	<li>Damian Ziubroniewicz	</li>
 	<li>Dr Rohit Babbar	</li>
