--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
    <p> Why is attending this important?   All great academic groups are more than the sum of their parts.   This is a venue where you can meet and discuss ideas with people from your own and other groups.  
 	  Throughout the year you will be exposed to 26 new ideas.  Many of these will be interesting but not directly influence your work, but every now and then you will get an idea that you can apply to your own research.
-	  In addition, then ensuing discussions will mean that you become familiar with everyone else's expertise.  Maybe knowledge that you have could be useful to someone else writing a NeurIPS paper. Co-authorship beckons.  
+	  In addition, the ensuing discussions will mean that you become familiar with everyone else's expertise.  Maybe knowledge that you have could be useful to someone else writing a NeurIPS paper. Co-authorship beckons.  
 	  More than the sum of our parts.  In addition, if you are a PhD student, you are going to need a job at the end of your degree.   A broader knowledge of ML can only help with this.  In short, the expected payback from
 	   this is very good even if it doesn't feel like that week to week.
   </p>
@@ -44,7 +44,7 @@
   <p>
     <u>Preparation:</u>
     The organizer (currently <a href = "mailto:sj2073@bath.ac.uk"> Sophia Jones</a>) will contact you two weeks in advance to ask for the paper that you will present.   You can choose whatever you want, but please choose something general/important enough that it will be of interset to most of the group.  
-    If you don't have any ideas, a suggested list of papers is kept <a href="https://docs.google.com/document/d/1dHP-4nOF-qH9EOdxSb1AQa3nSe0ixJdKfjn_ZN8MAmI/edit#heading=h.vvbkm4wwzx5j"> here</a>
+    If you don't have any ideas, a suggested list of papers is kept <a href="https://docs.google.com/document/d/1dHP-4nOF-qH9EOdxSb1AQa3nSe0ixJdKfjn_ZN8MAmI/edit#heading=h.vvbkm4wwzx5j"> here.</a>
   Feel free to add any interesting looking papers to the list! 
 
    The room is booked for a full hour, but it's assumed that most presentations will take about 20 minutes, leaving plenty of time for discussion.   Slides are encouraged, but working through the PDF of the paper is also acceptable.
