--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
 	<li>Emma Li	</li>
 	<li>Dr Xi Chen </li>
 	<li>Harry Clough	</li>
+	<li>George Fletcher	</li>
 	<li>Ketan Fatania	</li>
 	<li>Jessica Nicholson	</li>
 	<li>Dr Marina De Vos </li>
