--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
 	<li>Lukas Macha	</li>
 	<li>Professor Neill Campbell 	</li>
 	<li>Daniel Beechey	</li>
+	<li>Ferdie Krammer </li>
 	<li>Dr Wenbin Li 	</li>
 	<li>Dil Jagpal	</li>
 	<li>Professor Mike Tipping	</li>
