--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 	<tr>
           <td>18&nbsp;Jan &nbsp;2024</td>
 	  <td>Sophia Jones</td>
-          <td>TBC</td>
+          <td><a href="https://arxiv.org/abs/2305.18290"><b>Direct Preference Optimization: Your Language Model is Secretly a Reward Model</b></a> Rafael Rafailov, Archit Sharma, Eric Mitchell, Stefano Ermon, Christopher D. Manning, Chelsea Finn, NeurIPS 2023 </td>
         </tr>
 	<tr>
           <td>25&nbsp;Jan &nbsp;2024</td>
