--- a/index.html
+++ b/index.html
@@ -63,16 +63,6 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
-          <td>14&nbsp;Dec &nbsp;2023</td>
-	  <td>Prof Simon Prince</td>
-          <td><a href="https://arxiv.org/abs/2101.12176"><b>On the Origin of Implicit Regularization in Stochastic Gradient Descent</b></a> Samuel L. Smith, Benoit Dherin, David G. T. Barrett, Soham De, ICLR 2021</td>
-        </tr>
-	<tr>
-          <td>18&nbsp;Jan &nbsp;2024</td>
-	  <td>Sophia Jones</td>
-          <td><a href="https://arxiv.org/abs/2305.18290"><b>Direct Preference Optimization: Your Language Model is Secretly a Reward Model</b></a> Rafael Rafailov, Archit Sharma, Eric Mitchell, Stefano Ermon, Christopher D. Manning, Chelsea Finn, NeurIPS 2023 </td>
-        </tr>
 	<tr>
           <td>25&nbsp;Jan &nbsp;2024</td>
 	  <td>Josh Evans</td>
@@ -83,6 +73,16 @@
 	  <td>Jack McKinlay</td>
           <td>TBC</td>
         </tr>
+	<tr>
+          <td>29&nbsp;Feb &nbsp;2024</td>
+	  <td>Dr Tom Fincham Haines </td>
+          <td>TBC</td>
+        </tr>
+	<tr>
+          <td>14&nbsp;March &nbsp;2024</td>
+	  <td> Tom Cannon </td>
+          <td>TBC</td>
+        </tr>
       </tbody>
     </table>
   </div>
@@ -91,8 +91,6 @@
 <h5>Future speakers </h5>
 
 <ol>
-	<li>Dr Tom Fincham Haines	</li>
-	<li>Thomas Cannon	</li>
 	<li>Alice Parfett	</li>
 	<li>Emma Li	</li>
 	<li>Dr Xi Chen </li>
@@ -138,6 +136,35 @@
 	<li>Yifan Li	</li>
 	<li>Dona Shaji	</li>
 </ol>  
+
+</p>
+  <h4 class="center_text">Past Talks</h4>
+  <hr>
+
+  <div class="table-wrapper">
+    <table id="schedule" class="table table-hover table-striped">
+      <thead>
+        <tr>
+          <th scope="col" width="10%">Date</th>
+          <th scope="col" width="25%">Presenter</th>
+	  <th scope="col" width="65%">Paper</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>14&nbsp;Dec &nbsp;2023</td>
+	  <td>Prof Simon Prince</td>
+          <td><a href="https://arxiv.org/abs/2101.12176"><b>On the Origin of Implicit Regularization in Stochastic Gradient Descent</b></a> Samuel L. Smith, Benoit Dherin, David G. T. Barrett, Soham De, ICLR 2021</td>
+        </tr>
+	<tr>
+          <td>18&nbsp;Jan &nbsp;2024</td>
+	  <td>Sophia Jones</td>
+          <td><a href="https://arxiv.org/abs/2305.18290"><b>Direct Preference Optimization: Your Language Model is Secretly a Reward Model</b></a> Rafael Rafailov, Archit Sharma, Eric Mitchell, Stefano Ermon, Christopher D. Manning, Chelsea Finn, NeurIPS 2023 </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
 
 
 </body>
