--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
 	<tr>
           <td>15&nbsp;Feb &nbsp;2024</td>
 	  <td>Jack McKinlay</td>
-          <td>TBC</td>
+          <td><a href="https://david-abel.github.io/papers/wkshp_aaai2016_rl_ethics.pdf"><b>Reinforcement Learning As a Framework for Ethical Decision Making</b></a> David Abel, James MacGlashan and Michael L. Littman, AAAI Workshop: AI, Ethics, and Society 2016</td>
+        </tr>
         </tr>
 	<tr>
           <td>29&nbsp;Feb &nbsp;2024</td>
