--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
    The room is booked for a full hour, but it's assumed that most presentations will take about 20 minutes, leaving plenty of time for discussion.   Slides are encouraged, but working through the PDF of the paper is also acceptable.
 
   </p>
-  <h4 class="center_text">Schedule for 2023/24</h4>
+  <h4 class="center_text">Schedule for 2024</h4>
   <hr>
 
   <div class="table-wrapper">
