--- a/index.html
+++ b/index.html
@@ -64,11 +64,6 @@
       </thead>
       <tbody>
 	<tr>
-          <td>25&nbsp;Jan &nbsp;2024</td>
-	  <td>Josh Evans</td>
-          <td><a href="https://arxiv.org/abs/2306.09980"><b>Creating Multi-Level Skill Hierarchies in Reinforcement Learning</b></a> Joshua Benjamin Evans and &Ouml;zg&uuml;r &#350;im&#351;ek, NeurIPS 2023</td>
-        </tr>
-	<tr>
           <td>15&nbsp;Feb &nbsp;2024</td>
 	  <td>Jack McKinlay</td>
           <td><a href="https://david-abel.github.io/papers/wkshp_aaai2016_rl_ethics.pdf"><b>Reinforcement Learning As a Framework for Ethical Decision Making</b></a> David Abel, James MacGlashan and Michael L. Littman, AAAI Workshop: AI, Ethics, and Society 2016</td>
@@ -84,6 +79,11 @@
 	  <td> Tom Cannon </td>
           <td>TBC</td>
         </tr>
+	<tr>
+          <td>28&nbsp;Mar &nbsp;2024</td>
+	  <td> Alice Parfett </td>
+          <td>TBC</td>
+        </tr>
       </tbody>
     </table>
   </div>
@@ -92,7 +92,6 @@
 <h5>Future speakers </h5>
 
 <ol>
-	<li>Alice Parfett	</li>
 	<li>Dr Xi Chen </li>
 	<li>Harry Clough	</li>
 	<li>George Fletcher	</li>
@@ -161,6 +160,11 @@
           <td>18&nbsp;Jan &nbsp;2024</td>
 	  <td>Sophia Jones</td>
           <td><a href="https://arxiv.org/abs/2305.18290"><b>Direct Preference Optimization: Your Language Model is Secretly a Reward Model</b></a> Rafael Rafailov, Archit Sharma, Eric Mitchell, Stefano Ermon, Christopher D. Manning, Chelsea Finn, NeurIPS 2023 </td>
+        </tr>
+	<tr>
+          <td>25&nbsp;Jan &nbsp;2024</td>
+	  <td>Josh Evans</td>
+          <td><a href="https://arxiv.org/abs/2306.09980"><b>Creating Multi-Level Skill Hierarchies in Reinforcement Learning</b></a> Joshua Benjamin Evans and &Ouml;zg&uuml;r &#350;im&#351;ek, NeurIPS 2023</td>
         </tr>
       </tbody>
     </table>
