--- a/index.html
+++ b/index.html
@@ -64,12 +64,6 @@
       </thead>
       <tbody>
 	<tr>
-          <td>15&nbsp;Feb &nbsp;2024</td>
-	  <td>Jack McKinlay</td>
-          <td><a href="https://david-abel.github.io/papers/wkshp_aaai2016_rl_ethics.pdf"><b>Reinforcement Learning As a Framework for Ethical Decision Making</b></a> David Abel, James MacGlashan and Michael L. Littman, AAAI Workshop: AI, Ethics, and Society 2016</td>
-        </tr>
-        </tr>
-	<tr>
           <td>29&nbsp;Feb &nbsp;2024</td>
 	  <td>Dr Tom Fincham Haines </td>
           <td>TBC</td>
@@ -81,7 +75,12 @@
         </tr>
 	<tr>
           <td>28&nbsp;Mar &nbsp;2024</td>
-	  <td> Alice Parfett </td>
+	  <td> George Fletcher </td>
+          <td>TBC</td>
+        </tr>
+	<tr>
+          <td>28&nbsp;Mar &nbsp;2024</td>
+	  <td> Dr Xi Chen </td>
           <td>TBC</td>
         </tr>
       </tbody>
@@ -92,9 +91,8 @@
 <h5>Future speakers </h5>
 
 <ol>
-	<li>Dr Xi Chen </li>
 	<li>Harry Clough	</li>
-	<li>George Fletcher	</li>
+	<li>Alice Parfett	</li>
 	<li>Ketan Fatania	</li>
 	<li>Jessica Nicholson	</li>
 	<li>Dr Marina De Vos </li>
@@ -164,6 +162,11 @@
           <td>25&nbsp;Jan &nbsp;2024</td>
 	  <td>Josh Evans</td>
           <td><a href="https://arxiv.org/abs/2306.09980"><b>Creating Multi-Level Skill Hierarchies in Reinforcement Learning</b></a> Joshua Benjamin Evans and &Ouml;zg&uuml;r &#350;im&#351;ek, NeurIPS 2023</td>
+        </tr>
+	<tr>
+          <td>15&nbsp;Feb &nbsp;2024</td>
+	  <td>Jack McKinlay</td>
+          <td><a href="https://david-abel.github.io/papers/wkshp_aaai2016_rl_ethics.pdf"><b>Reinforcement Learning As a Framework for Ethical Decision Making</b></a> David Abel, James MacGlashan and Michael L. Littman, AAAI Workshop: AI, Ethics, and Society 2016</td>
         </tr>
       </tbody>
     </table>
