--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	<tr>
           <td>29&nbsp;Feb &nbsp;2024</td>
 	  <td>Dr Tom Fincham Haines </td>
-          <td>TBC</td>
+          <td><a href="https://arxiv.org/abs/2203.02016"><b>Interventions, Where and How? Experimental Design for Causal Models at Scale</b></a> Panagiotis Tigas, Yashas Annadani, Andrew Jesson, Bernhard Schölkopf, Yarin Gal, Stefan Bauer, NeurIPS 2022</td>
         </tr>
 	<tr>
           <td>14&nbsp;Mar &nbsp;2024</td>
