--- a/index.html
+++ b/index.html
@@ -64,14 +64,9 @@
       </thead>
       <tbody>
 	<tr>
-          <td>29&nbsp;Feb &nbsp;2024</td>
-	  <td>Dr Tom Fincham Haines </td>
-          <td><a href="https://arxiv.org/abs/2203.02016"><b>Interventions, Where and How? Experimental Design for Causal Models at Scale</b></a> Panagiotis Tigas, Yashas Annadani, Andrew Jesson, Bernhard Schölkopf, Yarin Gal, Stefan Bauer, NeurIPS 2022</td>
-        </tr>
-	<tr>
           <td>14&nbsp;Mar &nbsp;2024</td>
 	  <td> Tom Cannon </td>
-          <td>TBC</td>
+          <td><a href="https://arxiv.org/abs/1911.01547"><b>On the Measure of Intelligence</b></a> Fran&ccedil;ois Chollet </td>
         </tr>
 	<tr>
           <td>28&nbsp;Mar &nbsp;2024</td>
@@ -81,6 +76,11 @@
 	<tr>
           <td>11&nbsp;Apr &nbsp;2024</td>
 	  <td> Dr Xi Chen </td>
+          <td>TBC</td>
+        </tr>
+	<tr>
+          <td>25&nbsp;Apr &nbsp;2024</td>
+	  <td> Harry Clough	 </td>
           <td>TBC</td>
         </tr>
       </tbody>
@@ -167,6 +167,11 @@
           <td>15&nbsp;Feb &nbsp;2024</td>
 	  <td>Jack McKinlay</td>
           <td><a href="https://david-abel.github.io/papers/wkshp_aaai2016_rl_ethics.pdf"><b>Reinforcement Learning As a Framework for Ethical Decision Making</b></a> David Abel, James MacGlashan and Michael L. Littman, AAAI Workshop: AI, Ethics, and Society 2016</td>
+        </tr>
+	<tr>
+          <td>29&nbsp;Feb &nbsp;2024</td>
+	  <td>Dr Tom Fincham Haines </td>
+          <td><a href="https://arxiv.org/abs/2203.02016"><b>Interventions, Where and How? Experimental Design for Causal Models at Scale</b></a> Panagiotis Tigas, Yashas Annadani, Andrew Jesson, Bernhard Schölkopf, Yarin Gal, Stefan Bauer, NeurIPS 2022</td>
         </tr>
       </tbody>
     </table>
