--- a/index.html
+++ b/index.html
@@ -64,11 +64,6 @@
       </thead>
       <tbody>
 	<tr>
-          <td>14&nbsp;Mar &nbsp;2024</td>
-	  <td> Tom Cannon </td>
-          <td><a href="https://arxiv.org/abs/1911.01547"><b>On the Measure of Intelligence</b></a> Fran&ccedil;ois Chollet </td>
-        </tr>
-	<tr>
           <td>28&nbsp;Mar &nbsp;2024</td>
 	  <td> George Fletcher </td>
           <td>TBC</td>
@@ -83,6 +78,16 @@
 	  <td> Harry Clough	 </td>
           <td>TBC</td>
         </tr>
+	<tr>
+          <td>9&nbsp;May &nbsp;2024</td>
+	  <td> Harry Clough	 </td>
+          <td>TBC</td>
+        </tr>
+	<tr>
+          <td>23&nbsp;May &nbsp;2024</td>
+	  <td> Alice Parfett	 </td>
+          <td>TBC</td>
+        </tr>
       </tbody>
     </table>
   </div>
@@ -91,8 +96,6 @@
 <h5>Future speakers </h5>
 
 <ol>
-	<li>Harry Clough	</li>
-	<li>Alice Parfett	</li>
 	<li>Ketan Fatania	</li>
 	<li>Jessica Nicholson	</li>
 	<li>Dr Marina De Vos </li>
@@ -107,6 +110,7 @@
 	<li>Professor Özgür Şimşek	</li>
 	<li>Thomas Smith	</li>
 	<li>Dr Jie Zhang	</li>
+	<li>Todd Van Steenwyk</li>
 	<li>Dr Gennaro Auricchio	</li>
 	<li>Lukas Macha	</li>
 	<li>Professor Neill Campbell 	</li>
@@ -172,6 +176,11 @@
           <td>29&nbsp;Feb &nbsp;2024</td>
 	  <td>Dr Tom Fincham Haines </td>
           <td><a href="https://arxiv.org/abs/2203.02016"><b>Interventions, Where and How? Experimental Design for Causal Models at Scale</b></a> Panagiotis Tigas, Yashas Annadani, Andrew Jesson, Bernhard Schölkopf, Yarin Gal, Stefan Bauer, NeurIPS 2022</td>
+        </tr>
+	<tr>
+          <td>14&nbsp;Mar &nbsp;2024</td>
+	  <td> Tom Cannon </td>
+          <td><a href="https://arxiv.org/abs/1911.01547"><b>On the Measure of Intelligence</b></a> Fran&ccedil;ois Chollet </td>
         </tr>
       </tbody>
     </table>
