--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	<tr>
           <td>28&nbsp;Mar &nbsp;2024</td>
 	  <td> George Fletcher </td>
-          <td>TBC</td>
+          <td><a href="https://www.mdpi.com/1099-4300/25/10/1471"><b>TURBO: The Swiss Knife of Auto-Encoders</b></a> Guillaume Quétant, Yury Belousov, Vitaliy Kinakh, Slava Voloshynovskiy </td>
         </tr>
 	<tr>
           <td>11&nbsp;Apr &nbsp;2024</td>
