--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <hr>
 
   <p class="location_time center_text">
-    <b>Thursdays from 13:15 to 14:05.  In person only.  Feel free to bring your lunch!</b>
+    <b>Thursdays from 15:15 to 16:05.  In person only.  </b>
   </p>
 
   <p>
