--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </tr>
 	<tr>
           <td>11&nbsp;Apr &nbsp;2024</td>
-	  <td> Dr Xi Chen </td>
+	  <td> Yifan Li  </td>
           <td>TBC</td>
         </tr>
 	<tr>
@@ -129,7 +129,7 @@
 	<li>Jundan Luo	</li>
 	<li>Dr Georgios Exarchakis	</li>
 	<li>James Elson	</li>
-	<li>Yifan Li	</li>
+	<li>Dr Xi Chen</li>
 	<li>Dona Shaji	</li>
 </ol>  
 
