--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 	<tr>
           <td>11&nbsp;Apr &nbsp;2024</td>
 	  <td> Yifan Li  </td>
-          <td>TBC</td>
+          <td><a href="https://arxiv.org/abs/2311.01906"><b>Simplifying Transformer Blocks</b></a> Bobby He, Thomas Hofmann, ICLR 2024 </td>
         </tr>
 	<tr>
           <td>25&nbsp;Apr &nbsp;2024</td>
