--- a/index.html
+++ b/index.html
@@ -64,11 +64,6 @@
       </thead>
       <tbody>
 	<tr>
-          <td>28&nbsp;Mar &nbsp;2024</td>
-	  <td> George Fletcher </td>
-          <td><a href="https://www.mdpi.com/1099-4300/25/10/1471"><b>TURBO: The Swiss Knife of Auto-Encoders</b></a> Guillaume Quétant, Yury Belousov, Vitaliy Kinakh, Slava Voloshynovskiy </td>
-        </tr>
-	<tr>
           <td>11&nbsp;Apr &nbsp;2024</td>
 	  <td> Yifan Li  </td>
           <td><a href="https://arxiv.org/abs/2311.01906"><b>Simplifying Transformer Blocks</b></a> Bobby He, Thomas Hofmann, ICLR 2024 </td>
@@ -83,6 +78,11 @@
 	  <td> Alice Parfett		 </td>
           <td>TBC</td>
         </tr>
+	<tr>
+          <td>23&nbsp;May &nbsp;2024</td>
+	  <td> Ketan Fatania</td>
+          <td>TBC</td>
+        </tr>
       </tbody>
     </table>
   </div>
@@ -91,7 +91,6 @@
 <h5>Future speakers </h5>
 
 <ol>
-	<li>Ketan Fatania	</li>
 	<li>Jessica Nicholson	</li>
 	<li>Dr Marina De Vos </li>
 	<li>Siyuan Gou	</li>
@@ -176,6 +175,11 @@
           <td>14&nbsp;Mar &nbsp;2024</td>
 	  <td> Tom Cannon </td>
           <td><a href="https://arxiv.org/abs/1911.01547"><b>On the Measure of Intelligence</b></a> Fran&ccedil;ois Chollet </td>
+        </tr>
+	<tr>
+          <td>28&nbsp;Mar &nbsp;2024</td>
+	  <td> George Fletcher </td>
+          <td><a href="https://www.mdpi.com/1099-4300/25/10/1471"><b>TURBO: The Swiss Knife of Auto-Encoders</b></a> Guillaume Quétant, Yury Belousov, Vitaliy Kinakh, Slava Voloshynovskiy </td>
         </tr>
       </tbody>
     </table>
