--- a/index.html
+++ b/index.html
@@ -64,23 +64,23 @@
       </thead>
       <tbody>
 	<tr>
-          <td>25&nbsp;Apr &nbsp;2024</td>
-	  <td> Harry Clough	 </td>
-          <td>TBC</td>
-        </tr>
-	<tr>
           <td>9&nbsp;May &nbsp;2024</td>
-	  <td> Alice Parfett		 </td>
+	  <td> Ketan Fatania 		 </td>
           <td>TBC</td>
         </tr>
 	<tr>
           <td>23&nbsp;May &nbsp;2024</td>
-	  <td> Ketan Fatania</td>
+	  <td> Alice Parfett </td>
           <td>TBC</td>
         </tr>
 	<tr>
           <td>6&nbsp;June &nbsp;2024</td>
 	  <td> Jessica Nicholson </td>
+          <td>TBC</td>
+        </tr>
+	<tr>
+          <td>20&nbsp;June &nbsp;2024</td>
+	  <td> Dr Marina De Vos </td>
           <td>TBC</td>
         </tr>
       </tbody>
@@ -91,7 +91,6 @@
 <h5>Future speakers </h5>
 
 <ol>
-	<li>Dr Marina De Vos </li>
 	<li>Siyuan Gou	</li>
 	<li>Massoud Khodadadzadeh	</li>
 	<li>Matthew Hewitt	</li>
