--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <tbody>
 	<tr>
           <td>16&nbsp;May &nbsp;2024</td>
-	  <td> Ketan Fatania 		 </td>
+	  <td> Mohammed Fahid	 </td>
           <td><a href="https://arxiv.org/abs/2201.11903"><b>Chain-of-Thought Prompting Elicits Reasoning in Large Language Models</b></a> Jason Wei, Xuezhi Wang, Dale Schuurmans, Maarten Bosma, Brian Ichter, Fei Xia, Ed Chi, Quoc Le, Denny Zhou, NeurIPS 2022</td>
         </tr>
 	<tr>
@@ -94,7 +94,7 @@
 	<li>Siyuan Gou	</li>
 	<li>Massoud Khodadadzadeh	</li>
 	<li>Matthew Hewitt	</li>
-	<li>Mohammed Fahid	</li>
+	<li>Ketan Fatania 	</li>
 	<li>Akshil Patel	</li>
 	<li>Syeda Zahra	</li>
 	<li>Dr Julian Padget	</li>
