--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </tr>
 	<tr>
           <td>23&nbsp;May &nbsp;2024</td>
-	  <td> Alice Parfett </td>
+	  <td> Ketan Fatania </td>
           <td>TBC</td>
         </tr>
 	<tr>
@@ -94,7 +94,7 @@
 	<li>Siyuan Gou	</li>
 	<li>Massoud Khodadadzadeh	</li>
 	<li>Matthew Hewitt	</li>
-	<li>Ketan Fatania 	</li>
+	<li> Alice Parfett	</li>
 	<li>Akshil Patel	</li>
 	<li>Syeda Zahra	</li>
 	<li>Dr Julian Padget	</li>
