--- a/index.html
+++ b/index.html
@@ -64,16 +64,6 @@
       </thead>
       <tbody>
 	<tr>
-          <td>16&nbsp;May &nbsp;2024</td>
-	  <td>  Fahid Mohammed </td>
-          <td><a href="https://arxiv.org/abs/2201.11903"><b>Chain-of-Thought Prompting Elicits Reasoning in Large Language Models</b></a> Jason Wei, Xuezhi Wang, Dale Schuurmans, Maarten Bosma, Brian Ichter, Fei Xia, Ed Chi, Quoc Le, Denny Zhou, NeurIPS 2022</td>
-        </tr>
-	<tr>
-          <td>23&nbsp;May &nbsp;2024</td>
-	  <td> Ketan Fatania </td>
-          <td>TBC</td>
-        </tr>
-	<tr>
           <td>6&nbsp;June &nbsp;2024</td>
 	  <td> Jessica Nicholson </td>
           <td>TBC</td>
@@ -81,6 +71,16 @@
 	<tr>
           <td>20&nbsp;June &nbsp;2024</td>
 	  <td> Dr Marina De Vos </td>
+          <td>TBC</td>
+        </tr>
+	<tr>
+          <td>4&nbsp;July &nbsp;2024</td>
+	  <td> Siyuan Gou </td>
+          <td>TBC</td>
+        </tr>
+	<tr>
+          <td>18&nbsp;July &nbsp;2024</td>
+	  <td> Matthew Hewitt	</td>
           <td>TBC</td>
         </tr>
       </tbody>
@@ -91,9 +91,6 @@
 <h5>Future speakers </h5>
 
 <ol>
-	<li>Siyuan Gou	</li>
-	<li>Massoud Khodadadzadeh	</li>
-	<li>Matthew Hewitt	</li>
 	<li>Akshil Patel	</li>
 	<li>Syeda Zahra	</li>
 	<li>Dr Julian Padget	</li>
@@ -182,6 +179,11 @@
           <td>11&nbsp;Apr &nbsp;2024</td>
 	  <td> Yifan Li  </td>
           <td><a href="https://arxiv.org/abs/2311.01906"><b>Simplifying Transformer Blocks</b></a> Bobby He, Thomas Hofmann, ICLR 2024 </td>
+        </tr>
+	<tr>
+          <td>16&nbsp;May &nbsp;2024</td>
+	  <td>  Fahid Mohammed </td>
+          <td><a href="https://arxiv.org/abs/2201.11903"><b>Chain-of-Thought Prompting Elicits Reasoning in Large Language Models</b></a> Jason Wei, Xuezhi Wang, Dale Schuurmans, Maarten Bosma, Brian Ichter, Fei Xia, Ed Chi, Quoc Le, Denny Zhou, NeurIPS 2022</td>
         </tr>
       </tbody>
     </table>
