--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </tr>
 	<tr>
           <td>18&nbsp;July &nbsp;2024</td>
-	  <td> Matthew Hewitt	</td>
+	  <td> Akshil Patel		</td>
           <td>TBC</td>
         </tr>
       </tbody>
@@ -91,7 +91,6 @@
 <h5>Future speakers </h5>
 
 <ol>
-	<li>Akshil Patel	</li>
 	<li>Syeda Zahra	</li>
 	<li>Dr Julian Padget	</li>
 	<li>Dr Rohit Babbar	</li>
