--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
 	<li>Dr Andrew Barnes	</li>
 	<li>Dr Alexander Power	</li>
 	<li>Emma Li	</li>
+	<li> Matthew Hewitt </li>
 	<li>Ningchao Wang	</li>
 	<li>Yuchen Lu	</li>
 	<li>Isaac Flower	</li>
