--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </tr>
 	<tr>
           <td>18&nbsp;July &nbsp;2024</td>
-	  <td> Akshil Patel		</td>
+	  <td> Syeda Zahra		</td>
           <td>TBC</td>
         </tr>
       </tbody>
@@ -91,8 +91,8 @@
 <h5>Future speakers </h5>
 
 <ol>
-	<li>Syeda Zahra	</li>
 	<li>Dr Julian Padget	</li>
+	<li>Akshil Patel</li>
 	<li>Dr Rohit Babbar	</li>
 	<li>Professor Özgür Şimşek	</li>
 	<li>Thomas Smith	</li>
