--- a/index.html
+++ b/index.html
@@ -64,11 +64,6 @@
       </thead>
       <tbody>
 	<tr>
-          <td>6&nbsp;June &nbsp;2024</td>
-	  <td> Jessica Nicholson </td>
-          <td>TBC</td>
-        </tr>
-	<tr>
           <td>20&nbsp;June &nbsp;2024</td>
 	  <td> Dr Marina De Vos </td>
           <td>TBC</td>
@@ -184,6 +179,11 @@
           <td>16&nbsp;May &nbsp;2024</td>
 	  <td>  Fahid Mohammed </td>
           <td><a href="https://arxiv.org/abs/2201.11903"><b>Chain-of-Thought Prompting Elicits Reasoning in Large Language Models</b></a> Jason Wei, Xuezhi Wang, Dale Schuurmans, Maarten Bosma, Brian Ichter, Fei Xia, Ed Chi, Quoc Le, Denny Zhou, NeurIPS 2022</td>
+        </tr>
+	<tr>
+          <td>6&nbsp;June &nbsp;2024</td>
+	  <td> Jessica Nicholson </td>
+          <td><a href="https://arxiv.org/abs/2206.08332"><b>BYOL-Explore: Exploration by Bootstrapped Prediction</b></a> Zhaohan Daniel Guo, Shantanu Thakoor, Miruna Pîslar, Bernardo Avila Pires, Florent Altché, Corentin Tallec, Alaa Saade, Daniele Calandriello, Jean-Bastien Grill, Yunhao Tang, Michal Valko, Rémi Munos, Mohammad Gheshlaghi Azar, Bilal Piot, NeurIPS 2024 </td>
         </tr>
       </tbody>
     </table>
