--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@
 	  <td> Syeda Zahra		</td>
           <td>TBC</td>
         </tr>
+	<tr>
+          <td>1&nbsp;Aug &nbsp;2024</td>
+	  <td> Dr Julian Padget </td>
+          <td>TBC</td>
+        </tr>
       </tbody>
     </table>
   </div>
@@ -86,7 +91,6 @@
 <h5>Future speakers </h5>
 
 <ol>
-	<li>Dr Julian Padget	</li>
 	<li>Akshil Patel</li>
 	<li>Dr Rohit Babbar	</li>
 	<li>Professor Özgür Şimşek	</li>
