--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	<tr>
           <td>20&nbsp;June &nbsp;2024</td>
 	  <td> Dr Marina De Vos </td>
-          <td>TBC</td>
+          <td><a href="https://arxiv.org/abs/2302.12389"><b> Explainable AI is Dead, Long Live Explainable AI! </b></a> Tim Miller, Proceedings of the 2023 ACM Conference on Fairness, Accountability, and Transparency </td>
         </tr>
 	<tr>
           <td>4&nbsp;July &nbsp;2024</td>
