--- a/index.html
+++ b/index.html
@@ -64,14 +64,9 @@
       </thead>
       <tbody>
 	<tr>
-          <td>27&nbsp;June &nbsp;2024</td>
-	  <td> Dr Marina De Vos </td>
-          <td><a href="https://arxiv.org/abs/2302.12389"><b> Explainable AI is Dead, Long Live Explainable AI! </b></a> Tim Miller, Proceedings of the 2023 ACM Conference on Fairness, Accountability, and Transparency </td>
-        </tr>
-	<tr>
-          <td>4&nbsp;July &nbsp;2024</td>
+          <td>11&nbsp;July &nbsp;2024</td>
 	  <td> Siyuan Gou </td>
-          <td>TBC</td>
+          <td><a href="https://arxiv.org/abs/2307.03864"><b>When Do Transformers Shine in RL? Decoupling Memory from Credit Assignment</b></a> Tianwei Ni, Michel Ma, Benjamin Eysenbach, Pierre-Luc Bacon, NeurIPS 2023</td>
         </tr>
 	<tr>
           <td>18&nbsp;July &nbsp;2024</td>
@@ -188,6 +183,11 @@
           <td>6&nbsp;June &nbsp;2024</td>
 	  <td> Jessica Nicholson </td>
           <td><a href="https://arxiv.org/abs/2206.08332"><b>BYOL-Explore: Exploration by Bootstrapped Prediction</b></a> Zhaohan Daniel Guo, Shantanu Thakoor, Miruna Pîslar, Bernardo Avila Pires, Florent Altché, Corentin Tallec, Alaa Saade, Daniele Calandriello, Jean-Bastien Grill, Yunhao Tang, Michal Valko, Rémi Munos, Mohammad Gheshlaghi Azar, Bilal Piot, NeurIPS 2024 </td>
+        </tr>
+	<tr>
+          <td>27&nbsp;June &nbsp;2024</td>
+	  <td> Dr Marina De Vos </td>
+          <td><a href="https://arxiv.org/abs/2302.12389"><b> Explainable AI is Dead, Long Live Explainable AI! </b></a> Tim Miller, Proceedings of the 2023 ACM Conference on Fairness, Accountability, and Transparency </td>
         </tr>
       </tbody>
     </table>
