--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 	<tr>
           <td>18&nbsp;July &nbsp;2024</td>
 	  <td> Syeda Zahra		</td>
-          <td>TBC</td>
+          <td><a href="https://arxiv.org/abs/2304.03271"><b>Making AI Less "Thirsty": Uncovering and Addressing the Secret Water Footprint of AI Models</b></a> Pengfei Li, Jianyi Yang, Mohammad A. Islam, Shaolei Ren </td>
         </tr>
 	<tr>
           <td>1&nbsp;Aug &nbsp;2024</td>
